--- a/XAPerfTestRunner/XAPerfTestRunner.csproj
+++ b/XAPerfTestRunner/XAPerfTestRunner.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>xaptr</AssemblyName>
     <Nullable>enable</Nullable>
     <LangVersion>8.0</LangVersion>
