Add support for BuildAndInstall profiling

--- a/XAPerfTestRunner/XAPerfTestRunner.csproj
+++ b/XAPerfTestRunner/XAPerfTestRunner.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Mono.Options" Version="6.6.0.161" />
-	<PackageReference Include="Mono.Posix.NETStandard" Version="1.0.0" />
+    <PackageReference Include="Mono.Posix.NETStandard" Version="1.0.0" />
+    <PackageReference Include="MSBuild.StructuredLogger" Version="2.1.758" />
   </ItemGroup>
 </Project>
